--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myTestGulp",
+  "name": "gulp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "vahov",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.0",
